--- a/CSFG/CSFG.csproj
+++ b/CSFG/CSFG.csproj
@@ -91,8 +91,8 @@
     <Content Include="Sources\img\csfg.png" />
     <Content Include="Sources\img\dept.jpg" />
     <Content Include="Sources\img\file.png" />
-    <Content Include="Sources\sql\CSFG_DB -NEW.sql" />
     <Content Include="Sources\sql\CSFG_DB.sql" />
+    <Content Include="Sources\sql\CSFG_DB_VIEW.sql" />
     <Content Include="Team.aspx" />
     <Content Include="Utility\Activities.aspx" />
     <Content Include="Utility\Events.aspx" />
@@ -211,10 +211,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="Dynamic\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
